--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPjO45b2x427+cxG8OhTwbR",
+      "authorship_tag": "ABX9TyPIEF2eKjF0cZRGD8x18en5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -533,6 +532,306 @@
       },
       "execution_count": 25,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**DataFrame**"
+      ],
+      "metadata": {
+        "id": "lwW64SOD8nxv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.types import StructType, StringType, IntegerType, DoubleType, LongType\n",
+        "from pyspark.sql import SparkSession"
+      ],
+      "metadata": {
+        "id": "JS8nY65l87o9"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark = SparkSession.builder.appName('myAppName').getOrCreate()"
+      ],
+      "metadata": {
+        "id": "H3qCOmWC85hk"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "schema_nyse = StructType().add(\"exchange_name\",StringType(),True).add(\"stock_id\",StringType(),True).add(\"stock_dt\",StringType(),True).add(\"open\",DoubleType(),True).add(\"high\",DoubleType(),True).add(\"low\",DoubleType(),True).add(\"close\",DoubleType(),True).add(\"volume\",LongType(),True).add(\"adj_close\",DoubleType(),True)"
+      ],
+      "metadata": {
+        "id": "yDOVIb7e9JOz"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(schema_nyse)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K2b5UgtE9TpT",
+        "outputId": "8e5da4c5-fac1-436e-9fd5-fc902615ef3a"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "StructType([StructField('exchange_name', StringType(), True), StructField('stock_id', StringType(), True), StructField('stock_dt', StringType(), True), StructField('open', DoubleType(), True), StructField('high', DoubleType(), True), StructField('low', DoubleType(), True), StructField('close', DoubleType(), True), StructField('volume', LongType(), True), StructField('adj_close', DoubleType(), True)])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_with_schema = spark.read.format(\"csv\").option(\"header\",\"False\").schema(schema_nyse).load(\"/content/sample_data/NYSE.csv\")"
+      ],
+      "metadata": {
+        "id": "Ef-tpAaj9YPw"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_with_schema.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QNeXy7vY9p81",
+        "outputId": "4864aa7d-303b-49f2-e7e9-4bcd5e3382d1"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- exchange_name: string (nullable = true)\n",
+            " |-- stock_id: string (nullable = true)\n",
+            " |-- stock_dt: string (nullable = true)\n",
+            " |-- open: double (nullable = true)\n",
+            " |-- high: double (nullable = true)\n",
+            " |-- low: double (nullable = true)\n",
+            " |-- close: double (nullable = true)\n",
+            " |-- volume: long (nullable = true)\n",
+            " |-- adj_close: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_with_schema.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lkIby6iC9tdy",
+        "outputId": "b987e6dc-2461-41dc-f73f-23b1580b8798"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------------+--------+----------+----+----+----+-----+------+---------+\n",
+            "|exchange_name|stock_id|  stock_dt|open|high| low|close|volume|adj_close|\n",
+            "+-------------+--------+----------+----+----+----+-----+------+---------+\n",
+            "|         NYSE|     AEA|2010-02-08|4.42|4.42|4.21| 4.24|205500|     4.24|\n",
+            "|         NYSE|     AEA|2010-02-05|4.42|4.54|4.22| 4.41|194300|     4.41|\n",
+            "|         NYSE|     AEA|2010-02-04|4.55|4.69|4.39| 4.42|233800|     4.42|\n",
+            "|         NYSE|     AEA|2010-02-03|4.65|4.69| 4.5| 4.55|182100|     4.55|\n",
+            "|         NYSE|     AEA|2010-02-02|4.74| 5.0|4.62| 4.66|222700|     4.66|\n",
+            "|         NYSE|     AEA|2010-02-01|4.84|4.92|4.68| 4.75|194800|     4.75|\n",
+            "|         NYSE|     AEA|2010-01-29|4.97|5.05|4.76| 4.83|222900|     4.83|\n",
+            "|         NYSE|     AEA|2010-01-28|5.12|5.22|4.81| 4.98|283100|     4.98|\n",
+            "|         NYSE|     AEA|2010-01-27|4.82|5.16|4.79| 5.09|243500|     5.09|\n",
+            "|         NYSE|     AEA|2010-01-26|5.18|5.18|4.81| 4.84|554800|     4.84|\n",
+            "|         NYSE|     AEA|2010-01-25|5.42|5.48| 5.2| 5.22|257300|     5.22|\n",
+            "|         NYSE|     AEA|2010-01-22|5.52|5.59|5.31| 5.37|260800|     5.37|\n",
+            "|         NYSE|     AEA|2010-01-21|5.67|5.74|5.37| 5.51|264300|     5.51|\n",
+            "|         NYSE|     AEA|2010-01-20|5.65| 5.7|5.53| 5.66|244600|     5.66|\n",
+            "|         NYSE|     AEA|2010-01-19|5.54| 5.7|5.54| 5.69|368000|     5.69|\n",
+            "|         NYSE|     AEA|2010-01-15|5.48|5.55|5.33| 5.54|435500|     5.54|\n",
+            "|         NYSE|     AEA|2010-01-14|5.41| 5.5|5.39| 5.41|272200|     5.41|\n",
+            "|         NYSE|     AEA|2010-01-13| 5.5| 5.5|5.41| 5.45|176400|     5.45|\n",
+            "|         NYSE|     AEA|2010-01-12|5.47|5.51|5.41| 5.46|233100|     5.46|\n",
+            "|         NYSE|     AEA|2010-01-11|5.64|5.64|5.49| 5.55|178900|     5.55|\n",
+            "+-------------+--------+----------+----+----+----+-----+------+---------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_with_schema.registerTempTable(\"nyse\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jFQmGa_u-GKm",
+        "outputId": "f4179ba6-7663-4247-94ca-6e5bbeac6855"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/pyspark/sql/dataframe.py:329: FutureWarning: Deprecated in 2.0, use createOrReplaceTempView instead.\n",
+            "  warnings.warn(\"Deprecated in 2.0, use createOrReplaceTempView instead.\", FutureWarning)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_with_schema.createOrReplaceTempView(\"nyse\")"
+      ],
+      "metadata": {
+        "id": "pN5mopQpAJie"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_StockVol = spark.sql(\"select stock_id, sum(volume) from nyse group by stock_id\")"
+      ],
+      "metadata": {
+        "id": "jb4FAFNC-Qcp"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_StockVol.rdd.getNumPartitions()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E1U9Pwie-TyO",
+        "outputId": "4d21029b-b14f-4869-d848-480f5f931125"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_new = df_StockVol.repartition(1)"
+      ],
+      "metadata": {
+        "id": "Yy_Xmbwn-cs-"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_new.write.csv(\"/content/sample_data/pysprk7\")"
+      ],
+      "metadata": {
+        "id": "bKfPllsB-iQy"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_new.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uy0cw6TK-wxx",
+        "outputId": "7b38e5b6-8347-47e4-aff5-c2b872a24d36"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+-----------+\n",
+            "|stock_id|sum(volume)|\n",
+            "+--------+-----------+\n",
+            "|     AXP|40263020300|\n",
+            "|     AAV|  834246600|\n",
+            "|     ARM| 2087366800|\n",
+            "|     ASH| 2717488700|\n",
+            "|     AEB|   53273300|\n",
+            "|     ALE|  465167800|\n",
+            "|     ACH| 1448279800|\n",
+            "|     ASF|  848352700|\n",
+            "|     ABK|11899868300|\n",
+            "|     ATU| 1226088700|\n",
+            "|      AM| 2963437400|\n",
+            "|      AA|42061448400|\n",
+            "|     ALL|11492379500|\n",
+            "|     ADI|14597316000|\n",
+            "|     AKP|   34156700|\n",
+            "|     ARK|  408851300|\n",
+            "|     ANN| 4892554900|\n",
+            "|     ABM|  675519400|\n",
+            "|     AOS|  601422200|\n",
+            "|     ABX|16691172100|\n",
+            "+--------+-----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
